2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/35_DeclMethodAvantField.deca
// Description:
//    Programme : declartiond de field après methode
// Resultats:
//      Programme correcte et incorrecte contextuellemnt car la classe B n'est pas definit
//
// Historique:
//    cree le 19/01/2024
class A extends  B {
    int getX()
    {
        return x;
    }
    protected int x;
}